finished ch3 ex3 titanic dataset

--- a/03_mnist_classification_project.ipynb
+++ b/03_mnist_classification_project.ipynb
@@ -9239,7 +9239,7 @@
     }
    ],
    "source": [
-    "# Next let's computer the ROC AUC (Area under the Curve)\n",
+    "# Next let's compute the ROC AUC (Area under the Curve)\n",
     "from sklearn.metrics import roc_auc_score\n",
     "roc_auc_score(y_train_5, y_scores)"
    ]
