finished ch4 notes

--- a/03_mnist_classification_project.ipynb
+++ b/03_mnist_classification_project.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Ch3 Classification\n",
     "# MNIST Classification Task"
    ]
   },
