progress on chapter10

--- a/04_training_linear_models.ipynb
+++ b/04_training_linear_models.ipynb
@@ -874,7 +874,10 @@
     "| SVD             \t| Fast    \t| No                  \t| Slow    \t| 0           \t| No               \t| LinearRegression \t|\n",
     "| Batch GD        \t| Slow    \t| No                  \t| Fast    \t| 2           \t| Yes              \t| SGDRegressor     \t|\n",
     "| Stochastic GD   \t| Fast    \t| Yes                 \t| Fast    \t| ≥2          \t| Yes              \t| SGDRegressor     \t|\n",
-    "| Mini-batch GD   \t| Fast    \t| Yes                 \t| Fast    \t| ≥2          \t| Yes              \t| SGDRegressor     \t|"
+    "| Mini-batch GD   \t| Fast    \t| Yes                 \t| Fast    \t| ≥2          \t| Yes              \t| SGDRegressor     \t|\n",
+    "\n",
+    "\n",
+    "Created using https://www.tablesgenerator.com/markdown_tables#"
    ]
   },
   {
